@@ -249,10 +249,11 @@ DISTCLEANFILES = config.force
 TESTS = xdvipdfmx.test xdvipdfm-ann.test xdvipdfm-bad.test xdvipdfm-bb.test
 TESTS += xdvipdfm-bkm.test xdvipdfm-psz.test xdvipdfm-ptx.test xdvipdfm-res.test
 TESTS += xdvipdfm-rev.test xdvipdfm-ttc.test
-TESTS += dvipdfmx-upjf.test
+TESTS += dvipdfmx-upjf.test dvipdfmx-incl.test
 xdvipdfmx.log xdvipdfm-ann.log xdvipdfm-bad.log xdvipdfm-bb.log \
 	xdvipdfm-bkm.log xdvipdfm-psz.log xdvipdfm-ptx.log xdvipdfm-res.log \
-	xdvipdfm-rev.log xdvipdfm-ttc.log: xdvipdfmx$(EXEEXT)
+	xdvipdfm-rev.log xdvipdfm-ttc.log \
+	dvipdfmx-upjf.log dvipdfmx-incl.log: xdvipdfmx$(EXEEXT)
 EXTRA_DIST = $(TESTS)
 ## xdvipdfmx.test
 EXTRA_DIST += tests/dvipdfmx.cfg tests/psfonts.map
@@ -307,5 +308,8 @@ EXTRA_DIST += tests/upjf1-r.pl tests/upjf1-r.tfm
 EXTRA_DIST += tests/upjf1_full.zvp0 tests/upjf1_full.vf
 EXTRA_DIST += tests/upjf1_omit.zvp0 tests/upjf1_omit.vf
 DISTCLEANFILES += upjf.vf upjv.vf upjf-*.ofm upjv-*.ofm upjf-*.tfm upjf*.pdf
+## dvipdfmx-incl.test
+EXTRA_DIST += tests/multi_incl.dvi tests/multi_incl.tex tests/sue-mp.pdf
+DISTCLEANFILES += multi_incl.pdf
 ##
 EXTRA_DIST += tests/fullmap.dvi tests/fullmap.tex
